# usf-graph

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  GOAL.md  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml
.codex/skills/: usf
.github/workflows/: goal-phase-order-once.yml  proof-anchor.yml  validate-spec.yml
assurance/permutation-closure/: family-census.mjs  family-census.test.mjs  family-model.test.mjs  family-registry.mjs  foundation-gap-remediation.mjs  (+7 more)
census/: architecture.json  audit.json  canonical-artifacts.jsonl  classifications.json  closure.json  coverage.jsonl  dependencies.jsonl  dependency-lineage.jsonl  ignore-audit.json  materialisations.jsonl  package-lock.json  package.json  repository-universe.jsonl  schema.json  summary.json  universes.json  v2-compiler-universe.jsonl  v2-graph-universe.jsonl  v2-support-universe.jsonl  workpackage-lineage.jsonl
compiler/: package.json
decisions/: 00000001-repository-external-artefact-materialisation.adr.md  00000002-compiler-semantic-enforcement.adr.md  00000003-bootstrap-packet.adr.md
graph/: authority.ttl  claims.ttl  environments.ttl  manifest.yaml  ontology.ttl  providers.ttl  registry.ttl  shapes.ttl  taxonomy.ttl  vocabulary.ttl
scripts/: bootstrap-chroot.sh  enter-chroot.sh  load-graph.sh  provision-graph.sh  provision-stardog.sh  regenerate-authority.sh  validate-graph.sh  verify-agents.sh  verify-chroot.sh
semantic-model/: authority.ttl  claims.ttl  environments.ttl  manifest.yaml  ontology.ttl  registry.ttl  shapes.ttl  taxonomy.ttl  vocabulary.ttl
(+483 files in other folders)
